Error page: Workaround to fix problems on small mobile screen

--- a/src/main/resources/static/css/error.css
+++ b/src/main/resources/static/css/error.css
@@ -8,7 +8,6 @@ body {
   background-color: rgb(240, 241, 241);
   text-rendering: optimizeLegibility;
   height: 100%;
-  min-width:600px;
 }
 
 .text-wrapper {
